# REOF2

./: .gitignore  CMakeLists.txt  README.md  SLPM_656.92_functions.json  build_windows.bat
.github/data/: function_hashes.json  progress.json  progress_report.txt
.github/workflows/: track-progress.yml  verify-functions.yml
asm/: AddDmacHandler-00113ff0.s  AddDmacHandler-00114000.s  AddIntcHandler2-00113fc0.s  AddIntcHandler2-00113fd0.s  CancelWakeupThread-00114230.s  ChangeThreadPriority-00114170.s  CreateSema-001142e0.s  CreateThread-001140e0.s  Deci2Call-00114710.s  DeleteSema-001142f0.s  DeleteThread-001140f0.s  EndOfHeap-001142c0.s  ExecOSD-00114700.s  Exit-00113f00.s  ExitDeleteThread-00114120.s  FUN_00100250-00100250.s  FUN_001002b8-001002b8.s  FUN_00100358-00100358.s  FUN_001005b0-001005b0.s  FUN_00100668-00100668.s  FUN_00100708-00100708.s  FUN_00100788-00100788.s  FUN_001007e0-001007e0.s  FUN_00100858-00100858.s  FUN_00100b70-00100b70.s  FUN_00100b90-00100b90.s  FUN_00100d00-00100d00.s  FUN_00100d98-00100d98.s  FUN_00100e38-00100e38.s  FUN_00100ea8-00100ea8.s  FUN_001010c8-001010c8.s  FUN_001013a8-001013a8.s  FUN_001015a0-001015a0.s  FUN_001017a8-001017a8.s  FUN_00101988-00101988.s  FUN_00101a58-00101a58.s  FUN_00101b08-00101b08.s  FUN_00101ba0-00101ba0.s  FUN_00101c58-00101c58.s  FUN_00101d28-00101d28.s  (+4587 more)
extracted/: func_00100230.c  func_00100250.c  func_001002b8.c  func_00100358.c  func_001005b0.c  func_00100668.c  func_00100708.c  func_0010078c.c  func_001007e0.c  func_00100858.c  func_00100b70.c  func_00100b90.c  func_00100d00.c  func_00100d98.c  func_00100e38.c  func_00100ea8.c  func_001010c8.c  func_001013a8.c  func_001015a0.c  func_001017a8.c  func_00101988.c  func_00101a58.c  func_00101b08.c  func_00101ba0.c  func_00101c58.c  func_00101d28.c  func_00101e20.c  func_00101e38.c  func_00101e50.c  func_00101eb0.c  func_00101f80.c  func_00101fc0.c  func_00101fd0.c  func_00101fe0.c  func_00102150.c  func_001022b8.c  func_001022e8.c  func_00102328.c  func_00102370.c  func_00102388.c  (+4040 more)
src/: main_windows.c  stubs.c
src/audio/: audio_channel_fade.c  audio_channel_fade.h  audio_channel_init.c  audio_channel_init.h  audio_command_queue.c  audio_command_queue.h  audio_mode.c  audio_mode.h  audio_panning.c  audio_panning.h  audio_stereo_setting.c  audio_stereo_setting.h  audio_volume.c  audio_volume.h  sound_bank.c  sound_bank.h
src/compression/: lz77_decompress.c  lz77_decompress.h
src/core/: entry.c  hardware.c  memory.c  thread.c  timing.c  timing.h
src/core/memory/: allocation.c  pool.c
src/core/sync/: semaphore.c
src/core/thread/: management.c
src/core/utility/: array.c  array.h  lookup.c
src/game/: boot_load_check.c  boot_load_check.h  boot_load_wait.c  boot_load_wait.h  camera_input.c  camera_input.h  camera_update.c  camera_update.h  data_collection_processor.c  data_collection_processor.h  demo_loop.c  demo_loop.h  demo_overlay.c  demo_overlay.h  demo_state.c  demo_state.h  engine_startup.c  engine_startup.h  entity_check.c  entity_check.h  entity_ready_check.c  entity_ready_check.h  frame_finalize.c  frame_finalize.h  frame_update.c  frame_update.h  game_data.c  game_data.h  game_frame_callback.c  game_frame_callback.h  game_init.c  game_init.h  game_init_counter.c  game_init_counter.h  game_secondary_init.c  game_secondary_init.h  game_state_flags.c  game_state_flags.h  game_state_init.c  game_state_init.h  (+50 more)
src/graphics/: display_brightness.c  display_brightness.h  display_settings.c  display_settings.h  fade_control.c  fade_control.h  font.c  font.h  frame_sync.c  frame_sync.h  game_font.c  game_font.h  graphics_buffer.c  graphics_buffer.h  graphics_init.c  graphics_init.h  render_state_manager.c  render_state_manager.h  screen_offset.c  screen_offset.h  texture_slot.c  texture_slot.h
src/io/: afs_reader.c  afs_reader.h  cdrom.c  file_loader.c  file_loader.h  filesystem.c  resource_loader.c  resource_loader.h  tim2_decoder.c  tim2_decoder.h
src/media/: video_player.c  video_player.h
src/memory/: memory_region.c  memory_region.h  resource_pool.c  resource_pool.h
src/platform/windows/: input.c  input.h  opengl_renderer.c  opengl_renderer.h
src/system/: system_timing.c  system_timing.h
tools/: generate_badge.py  track_progress.py  verify_functions.py
